@@ -1,3 +1,8 @@
+2009-06-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* base.py, flickr.py, picasa.py: Fixed issue #19. (Can't
+	  reconfigure photo source settings of Picasa Web Album.)
+
 2009-06-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* picasa.py (PicasaPhotoList): Fixed issue #18. (The User target of
